[WIP]feat: adapt jspecify nullable annotation in 2.x (#220)
Signed-off-by: luoquan.wl <luoquan.wl@alibaba-inc.com>
Signed-off-by: yuluo-yx <yuluo08290126@gmail.com>
Co-authored-by: guanxu <86234262+guanxuc@users.noreply.github.com>
Co-authored-by: chickenlj <ken.lj.hz@gmail.com>
Co-authored-by: guanxu <1510424541@qq.com>
Co-authored-by: big-saltedfish <62499883+big-saltedfish@users.noreply.github.com>
Co-authored-by: buvidk1234 <161066602+buvidk1234@users.noreply.github.com>