@@ -15,24 +15,21 @@
  */
 package com.alibaba.cloud.ai.toolcalling.githubtoolkit;
 
+import java.io.IOException;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
+
 import com.alibaba.cloud.ai.toolcalling.common.JsonParseTool;
 import com.alibaba.cloud.ai.toolcalling.common.WebClientTool;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import com.fasterxml.jackson.annotation.JsonClassDescription;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonPropertyDescription;
-import com.fasterxml.jackson.annotation.JsonClassDescription;
-
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import org.jspecify.annotations.Nullable;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class GetIssueService implements Function<GetIssueService.Request, Response> {
 
@@ -50,7 +47,9 @@ public class GetIssueService implements Function<GetIssueService.Request, Respon
 
 	public GetIssueService(GithubToolKitProperties properties, WebClientTool webClientTool,
 			JsonParseTool jsonParseTool) {
-		assert properties.getToken() != null && properties.getToken().length() == 40;
+		GithubToolKitValueUtils.requireConfiguredText(properties.getToken(), "GitHub token");
+		GithubToolKitValueUtils.requireConfiguredText(properties.getOwner(), "GitHub owner");
+		GithubToolKitValueUtils.requireConfiguredText(properties.getRepository(), "GitHub repository");
 		this.properties = properties;
 		this.webClientTool = webClientTool;
 		this.jsonParseTool = jsonParseTool;
@@ -60,9 +59,8 @@ public class GetIssueService implements Function<GetIssueService.Request, Respon
 	public Response apply(Request request) {
 		try {
 			String endpoint = REPO_ENDPOINT + ISSUES_ENDPOINT + "/{issueNumber}";
-			String responseData = webClientTool.get(endpoint, Map.of("owner", properties.getOwner(), "repo",
-					properties.getRepository(), "issueNumber", request.issueNumber()))
-				.block();
+			String responseData = GithubToolKitValueUtils.requireResponseBody(
+					webClientTool.get(endpoint, repositoryVariables(request.issueNumber())).block(), "Get issue");
 			logger.info("GetIssueOperation response: {}", responseData);
 			return new Response<>(parseIssueDetails(responseData));
 		}
@@ -73,62 +71,48 @@ public class GetIssueService implements Function<GetIssueService.Request, Respon
 	}
 
 	public Issue parseIssueDetails(String json) throws JsonProcessingException {
-		long id = Long.parseLong(jsonParseTool.getFieldValueAsString(json, "id"));
-		String title = jsonParseTool.getFieldValueAsString(json, "title").replaceAll("\"", "");
-		String state = jsonParseTool.getFieldValueAsString(json, "state").replaceAll("\"", "");
-		String createdAt = jsonParseTool.getFieldValueAsString(json, "created_at").replaceAll("\"", "");
-		String updatedAt = jsonParseTool.getFieldValueAsString(json, "updated_at").replaceAll("\"", "");
-		int comments = Integer.parseInt(jsonParseTool.getFieldValueAsString(json, "comments"));
-		String htmlUrl = jsonParseTool.getFieldValueAsString(json, "html_url").replaceAll("\"", "");
-		String body = jsonParseTool.getFieldValueAsString(json, "body").replaceAll("\"", "");
-		String closedAt = jsonParseTool.getFieldValueAsString(json, "closed_at").replaceAll("\"", "");
+		Map<String, Object> issueMap = jsonParseTool.jsonToMap(json, Object.class);
+		Map<String, Object> userMap = GithubToolKitValueUtils.requireObject(issueMap, "user");
+		long id = GithubToolKitValueUtils.requireLong(issueMap, "id");
+		String title = GithubToolKitValueUtils.requireString(issueMap, "title");
+		String state = GithubToolKitValueUtils.requireString(issueMap, "state");
+		String createdAt = GithubToolKitValueUtils.requireString(issueMap, "created_at");
+		String updatedAt = GithubToolKitValueUtils.requireString(issueMap, "updated_at");
+		int comments = GithubToolKitValueUtils.requireInt(issueMap, "comments");
+		String htmlUrl = GithubToolKitValueUtils.requireString(issueMap, "html_url");
+		@Nullable String body = GithubToolKitValueUtils.nullableString(issueMap, "body");
+		@Nullable String closedAt = GithubToolKitValueUtils.nullableString(issueMap, "closed_at");
 
-		String userLogin = jsonParseTool.getDepthFieldValueAsString(json, "user", "login").replaceAll("\"", "");
-		String closedBy = jsonParseTool.getDepthFieldValueAsString(json, "closed_by", "login").replaceAll("\"", "");
-
-		List<String> labels = new ArrayList<>();
-		try {
-			List<Map<String, Object>> labelObjects = jsonParseTool.getFieldValue(json,
-					new TypeReference<List<Map<String, Object>>>() {
-					}, "labels");
-
-			if (labelObjects != null) {
-				labels = labelObjects.stream()
-					.map(labelMap -> (String) labelMap.get("name"))
-					.filter(Objects::nonNull)
-					.collect(Collectors.toList());
-			}
-		}
-		catch (Exception e) {
-			logger.warn("Failed to parse labels from JSON: {}", e.getMessage());
-			labels = new ArrayList<>();
+		String userLogin = GithubToolKitValueUtils.requireString(userMap, "login");
+		@Nullable String closedBy = null;
+		if (issueMap.get("closed_by") != null) {
+			closedBy = GithubToolKitValueUtils
+				.requireString(GithubToolKitValueUtils.requireObject(issueMap, "closed_by"), "login");
 		}
 
-		List<String> assignees = new ArrayList<>();
-		try {
-			List<Map<String, Object>> assigneeObjects = jsonParseTool.getFieldValue(json,
-					new TypeReference<List<Map<String, Object>>>() {
-					}, "assignees");
-
-			if (assigneeObjects != null) {
-				assignees = assigneeObjects.stream()
-					.map(assigneeMap -> (String) assigneeMap.get("login"))
-					.filter(Objects::nonNull)
-					.collect(Collectors.toList());
-			}
-		}
-		catch (Exception e) {
-			logger.warn("Failed to parse assignees from JSON: {}", e.getMessage());
-			assignees = new ArrayList<>();
-		}
+		List<String> labels = GithubToolKitValueUtils.optionalObjectList(issueMap, "labels")
+			.stream()
+			.map(labelMap -> GithubToolKitValueUtils.requireString(labelMap, "name"))
+			.toList();
+		List<String> assignees = GithubToolKitValueUtils.optionalObjectList(issueMap, "assignees")
+			.stream()
+			.map(assigneeMap -> GithubToolKitValueUtils.requireString(assigneeMap, "login"))
+			.toList();
 
 		return new Issue(id, title, body, state, userLogin, labels, assignees, createdAt, updatedAt, closedAt, closedBy,
 				comments, htmlUrl);
 	}
 
-	public record Issue(long id, String title, String body, String state, String userLogin, List<String> labels,
-			List<String> assignees, String createdAt, String updatedAt, String closedAt, String closedBy, int comments,
-			String htmlUrl) {
+	private Map<String, Object> repositoryVariables(Integer issueNumber) {
+		return Map.of("owner", GithubToolKitValueUtils.requireConfiguredText(properties.getOwner(), "GitHub owner"),
+				"repo",
+				GithubToolKitValueUtils.requireConfiguredText(properties.getRepository(), "GitHub repository"),
+				"issueNumber", issueNumber);
+	}
+
+	public record Issue(long id, String title, @Nullable String body, String state, String userLogin,
+			List<String> labels, List<String> assignees, String createdAt, String updatedAt, @Nullable String closedAt,
+			@Nullable String closedBy, int comments, String htmlUrl) {
 	}
 
 	@JsonInclude(JsonInclude.Include.NON_NULL)
